--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
   dio: 1.0.6
-  shared_preferences: 0.4.3
+  #shared_preferences: 0.4.3
 
 dev_dependencies:
   flutter_test:
