--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dio: 1.0.6
   shared_preferences: 0.4.3
   http: 0.12.0
+  url_launcher: 4.0.1
 
 dev_dependencies:
   flutter_test:
