--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: 0.4.3
   http: 0.12.0
   url_launcher: 4.0.1
+  path_provider: 0.4.1
 
 dev_dependencies:
   flutter_test:
