--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,11 @@ dependencies:
   english_words: ^3.1.0
   dio: 1.0.6
   shared_preferences: 0.4.3
-  http: 0.12.0
+  http: 0.11.3+17
   url_launcher: 4.0.1
   path_provider: 0.4.1
+  permission_handler: 2.1.1
+  package_info: 0.3.2
 
 dev_dependencies:
   flutter_test:
