--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   http: 0.11.3+17
   url_launcher: 4.0.1
   path_provider: 0.4.1
-  permission_handler: 2.1.1
+  # permission_handler: 2.1.1
   package_info: 0.3.2
 
 dev_dependencies:
