--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   path_provider: 0.4.1
   # permission_handler: 2.1.1
   package_info: 0.3.2
+  qr_flutter: 1.1.5
+  device_info: 0.3.0
 
 dev_dependencies:
   flutter_test:
