--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   package_info: 0.3.2
   qr_flutter: 1.1.5
   device_info: 0.3.0
+  event_bus: 1.0.1
 
 dev_dependencies:
   flutter_test:
